codingame:mars: Success Step 1